# RayTracing

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md
.tours/: raytraceinoneweekend.tour
image/: Finallll.ppm  Rectangle.ppm  cornell_box.ppm  light.ppm  light2.ppm
image/AA/: MSAA_16_16.ppm  MSAA_2_2.ppm  MSAA_4_4.ppm  output_NoAA.ppm  output_RandomAA.ppm
image/ColorIntensity/: GammaColor_10.ppm  GammaColor_30.ppm  GammaColor_50.ppm  GammaColor_70.ppm  GammaColor_90.ppm  LinearColor_10.ppm  LinearColor_30.ppm  LinearColor_50.ppm  LinearColor_70.ppm  LinearColor_90.ppm
image/Diffuse/: Diffuse0.ppm  Diffuse1.ppm  Diffuse2_Lambertian.ppm
image/Light/: cornell_box.ppm  light.ppm
image/Material/: Dielectric0.ppm  Glass.ppm  HollowGlass.ppm  Metal1.ppm
image/MotionBlur/: MotionBlur.ppm
image/PerlinNoise/: HashedPerLin.ppm  HermitianPerLin.ppm  HighFrePerLin.ppm  TrilinearInterpolationPerLin.ppm  TurbPerLin.ppm  VecPerLin.ppm
image/Rectangle/: Rectangle.ppm  Rectangle2.ppm  Triangle.ppm
image/Texture/: earth.ppm
image/camera/: camera0.ppm  camera_defocus_rr.ppm  camera_vfov20.ppm
image/start/: Scene3.ppm  Sphere0.ppm  Sphere0_-20_5.ppm  Sphere0_normal.ppm
include/: Vector.hpp
include/Base/: Color.hpp  Head.hpp  Interval.hpp  Ray.hpp  Vector.hpp
include/Camera/: Camera.hpp
include/Material/: Material.hpp  Materials.hpp
src/: AABB.cc  BVH.cc  Camera.cc  Color.cc  ImageRTW.cc  Intersection.cc  Interval.cc  Material.cc  Materials.cc  Object.cc  Perlin.cc  Scene.cc  Texture.cc  Vector.cc  main.cc
(+8 files in other folders)
